added weather icons

--- a/style.css
+++ b/style.css
@@ -58,12 +58,18 @@ input{
     padding: 0px;
 }
 
+.main {
+    padding: 10px;
+}
+
 .forecast{
     padding: 0px;
+    margin: 10px;
 }
 
 h1{
     font-size: 25px;
+    margin: 0px;
 }
 
 h2{
@@ -72,4 +78,12 @@ h2{
 
 h4{
     font-size: 20px;
+    margin: 0px;
+}
+
+footer {
+    text-align: center;
+    background-color: lightgray;
+    color: white;
+    bottom: 0;
 }
